<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity" >

    <androidx.cardview.widget.CardView
        android:id="@+id/apply_btn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="1"
        app:cardBackgroundColor="@color/button_active"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/apply"
            android:textColor="@color/button_active_text"
            android:textSize="16sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/match_card"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/match_color"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apply_btn">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/parsed_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/match_color"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/match_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/match"
                    android:textColor="@color/match_color"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/border"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <EditText
                android:id="@+id/target_phrase"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/target_phrase"
                android:inputType="text|textUri"
                android:text="@string/template_phrase"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/border"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <EditText
                android:id="@+id/url_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/url"
                android:inputType="text|textUri"
                android:text="http://pagemonitor.office.com.ro/pagina1.html"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/monitoring"
        android:textColor="@color/main_text"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_url"
        android:textColor="@color/main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_target_phrase"
        android:textColor="@color/main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/enter_time_interval"
        android:textColor="@color/main_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleLabel" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/border"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <EditText
                android:id="@+id/time_interval"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/time_interval"
                android:inputType="number|numberDecimal"
                android:text="15"
                android:textColor="@color/main_text"
                android:textColorHint="@color/secondary_text"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/start_stop_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="6dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/button_stop"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <TextView
                android:id="@+id/start_stop_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/stop"
                android:textColor="@color/button_stop_text"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/check_now_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/button_active"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/check"
                android:textColor="@color/button_active_text"
                android:textSize="16sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>